--- a/pwa/src/templates/wooItemDetailTemplate/WOOItemDetailTemplate.module.css
+++ b/pwa/src/templates/wooItemDetailTemplate/WOOItemDetailTemplate.module.css
@@ -36,10 +36,6 @@
   text-transform: var(--utrecht-heading-1-text-transform, inherit);
 }
 
-.hyphenated {
-  hyphens: auto;
-}
-
 .backLink:hover {
   cursor: pointer;
 }
